manifests/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: apicontagemaula
spec:
  replicas: 5
  selector:
    matchLabels:
      app: apicontagemaula
  template:
    metadata:
      labels:
        app: apicontagemaula
    spec:
      containers:
        - name: apicontagemaula
          image: groffeazuredevops.azurecr.io/apicontagemaula
          ports:
          - containerPort: 80
