manifests/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: apicounter
  namespace: default  
spec:
  rules:
  - host: apicounter.info
  - http:
      paths:
      - path: /api/counter
        backend:
          serviceName: apicounter
          servicePort: 80
